git ivap and isotonic regression set up

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 {
   "feature_defs": [
-    "words,min_df=2,transform=binarize"
+    "unigrams,min_df=2,transform=binarize",
+    "bigrams,min_df=3,transform=binarize"
   ]
 }
